@@ -2,6 +2,17 @@
 
         Reviewed by David Levin.
 
+        Update WebCore/page/BarInfo.cpp to conform to WebKit
+        Style Guidelines as identified by cpplint.py.
+        https://bugs.webkit.org/show_bug.cgi?id=27606
+
+        * page/BarInfo.cpp:
+        (WebCore::BarInfo::visible):
+
+2009-07-23  Mike Fenton  <mike.fenton@torchmobile.com>
+
+        Reviewed by David Levin.
+
         Update WebCore/page/Console.cpp to conform to WebKit
         Style Guidelines as identified by cpplint.py.
         https://bugs.webkit.org/show_bug.cgi?id=27606
